--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
 <head>
     <title>React Assessment</title>
     <meta charset="UTF-8"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
+<div id="modal"></div>
 <div id="app"></div>
 </body>
 
